k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-site
  labels:
    app.kubernetes.io/name: k8s-cicd-demo-site
