k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-cicd-demo-site
  namespace: demo-site
  labels:
    app: k8s-cicd-demo-site
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: k8s-cicd-demo-site
  template:
    metadata:
      labels:
        app: k8s-cicd-demo-site
    spec:
      containers:
        - name: website
          image: docker.io/sathishsiddamsetty/k8s-cicd-demo-site:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
