k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-cicd-demo-site
  namespace: demo-site
  labels:
    app: k8s-cicd-demo-site
spec:
  type: ClusterIP
  selector:
    app: k8s-cicd-demo-site
  ports:
    - name: http
      port: 80
      targetPort: 80
