k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-cicd-demo-site
  namespace: demo-site
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: demo-site.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-cicd-demo-site
                port:
                  number: 80
